--- a/index.Rmd
+++ b/index.Rmd
@@ -60,3 +60,12 @@ ggplot(data = df, aes(x = InternetService, fill = MonthlyCharges)) +
   theme(legend.position = "none")
 ```
 
+Column
+-----------------------------------------------------------------------
+### CD
+```{r}
+# Box Plot
+ggplot(data = df, aes(x = MonthlyCharges, y = Churn, fill = MonthlyCharges)) +
+  geom_boxplot()
+```
+
